# DonguriGaeru

./: .gitignore  .pre-commit-config.yaml  README.md  build.gradle.kts  example_config.py  gradle.properties  gradlew  libs.versions.toml  pyproject.toml  requirements.txt  settings.gradle.kts
donguri_gaeru/: __init__.py  __main__.py  algorithm.py  bot.py  config.py  database.py  donguri_gaeru.py  logger.py  rating.py
donguri_gaeru/cogs/: admin.py  data.py  info.py  match.py  match_management.py  player.py  player_management.py  registration.py
donguri_gaeru/core/: utils.py
donguri_gaeru/utils/: checks.py  command_utils.py  helpers.py
dongurigaeru/: __main__.py  config.py  logger.py
dongurigaeru/core/: utils.py
glicko2/: glicko2.py
gradle/wrapper/: gradle-wrapper.properties
src/main/kotlin/cafe/ferret/dongurigaeru/: App.kt  Utils.kt
src/main/kotlin/cafe/ferret/dongurigaeru/database/: Collection.kt  Database.kt  Entity.kt
src/main/kotlin/cafe/ferret/dongurigaeru/extensions/: AdminExtension.kt  InfoExtension.kt  PlayerExtension.kt  UtilityExtension.kt
src/main/kotlin/cafe/ferret/dongurigaeru/utils/: DiscordLocale.kt  DonguriGaeruLocale.kt
studies/hikuwr/: algorithm.py  compare.py  hikuwr.py  ranking.py  ratings_feb_2020.txt  validate.py
studies/hikuwr/fr/hiku/: WorldRanking.java
studies/hikuwr/results/: hikuwr.txt  hikuwr_puyolobbyA.txt  hikuwr_puyolobbyB.txt  matchups.txt  most_common_matchups.txt  validate_algorithm.txt
studies/hikuwr/source/: WorldRanking.java  matches_aug_2021.txt
tests/: test_database.py  test_glicko2.py
(+4 files in other folders)
